--- a/final-exam.css
+++ b/final-exam.css
@@ -6,7 +6,7 @@
   overflow: auto;
 }
 
-.body {
+body {
   background-color: darkgrey;
 }
 
@@ -19,4 +19,32 @@
 img {
   max-width: 100%;
   height: auto;
+}
+
+a {
+  color: #8ec127;
+}
+
+h1, h2, h3 {
+  font-family: georgia;
+}
+
+h2 {
+  margin-top: 0;
+  font-size: 24px;
+  font-style: italic;
+}
+
+h3 {
+  font-weight: normal;
+  padding-bottom: 2px;
+}
+
+.source {
+  border-bottom: solid 5px #E8E8E8;
+  padding-bottom: 20px;
+}
+
+.left-column {
+  margin-top: 35px;
 }
